# private-chatbot-mpt30b-langchain

./: .env.example  .gitignore  Makefile  README.md  chat.py  constants.py  download_model.py  ingest.py  pyproject.toml  question_answer.py  question_answer_docs.py  utils.py
source_documents/: nvidia_earnings_call_q1_2024.txt
